Fri Jan  8 20:11:56 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>

	* htdig/Plaintext.cc: fixed bug that inhibited compressing of 
	whitespace
	
	* htlib/URL.cc: fixed problem in stripping anchors from URLs

Thu Jan  7 23:29:32 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc(parse): Corrected problems with parsing comments,
	as contributed by Marjolein Katsma <webmaster@javawoman.com> and
	Gilles.

	* htsearch/Display.cc, htsearch/Display.h: Implement
	add_anchors_to_excerpt option and new variable ANCHOR as
	contributed by Marjolein.

	* htdoc/THANKS.html: Added new contributors.

	* README: Update for 1999 copyright, version, etc.
	
Thu Jan  7 17:29:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/(attrs.html, cf_byname.html, cf_byprog.html): Fix typo
	noted by Joe Jah: keyword_factor -> keywords_factor.

Thu Jan  7 14:32:34 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (display): The start template, if provided,
	should come out after the header, not before.

	* htcommon/defaults.cc, installdir/footer.html: Use the
	no_page_list_header stuff.
	
Thu Jan  7 11:09:08 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/*.png: Add PNG versions of the default GIF graphics.

Wed Jan  6 22:03:54 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Synonym.cc, htfuzzy/htfuzzy.cc, htmerge/docs.cc,
	htmerge/words.cc, htdig/SGMLEntities.cc: Fix minor memory leaks.

	* htcommon/defaults.cc: Add .bin, .tgz, .rpm, .mov, .mpg, .avi to
	bad_extensions.

	* htdoc/attrs.html: Update documentation on default.

	* installdir/rundig: Removed check for age of synonym and endings
	DB. Nice feature, but it broke under too many shells.

	* htlib/DB2_db.cc: Change allocation of database cursors to match
	API in new version.

	* htdig/Retriever.cc(got_word): Skip changing to lowercase, we do
	it in WordList::Word.
	
Wed Jan  6 14:49:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
