@@ -4,72 +4,60 @@
 // Implementation of Document
 //
 // $Log: Document.cc,v $
+// Revision 1.28  1999/01/09 19:58:36  ghutchis
+// Strip off weekday before calling strptime since some servers return invalid
+// weekdays.
+//
 // Revision 1.27  1998/12/12 01:46:48  ghutchis
 // Check http_proxy_exclude to see if it's empty. If so, use the proxy always.
 //
 // Revision 1.26  1998/12/04 04:14:50  ghutchis
-//
 // Use new option "http_proxy_exclude" to decide whether to use the proxy.
 //
 // Revision 1.25  1998/11/30 02:28:50  ghutchis
-//
 // Fix mistake in last update so the code compiles.
 //
 // Revision 1.24  1998/11/30 01:55:00  ghutchis
-//
 // Fixed problems under FreeBSD where <sys/types.h> needed to be before
 // <sys/stat.h>, noted by Gilles. Fixed core dumps caused by mystrptime
 // returning NULL. Instead, we'll use the time(0).
 //
 // Revision 1.23  1998/11/18 05:16:02  ghutchis
-//
 // Fixed memory leak as a result of a thinko.
 //
 // Revision 1.22  1998/11/09 19:35:09  ghutchis
-//
 // Changed reset to keep proxy settings--fixes bug noted by Didier Gautheron
 // <dgautheron@magic.fr>.
 //
 // Revision 1.21  1998/11/02 20:30:35  ghutchis
-//
 // Remove const from *ext to fix compiler warning.
 //
 // Revision 1.20  1998/11/01 00:00:40  ghutchis
-//
 // Replaced system calls with htlib/my* functions.
 //
 // Revision 1.19  1998/10/26 20:43:31  ghutchis
-//
 // Fixed bug introduced by Oct 18 change. Authorization will not be cleared.
 //
 // Revision 1.18  1998/10/18 21:22:16  ghutchis
-//
 // Revised connection timeout methods.
 //
 // Revision 1.17  1998/10/12 02:04:00  ghutchis
-//
 // Updated Makefiles and configure variables.
 //
 // Revision 1.15  1998/09/08 03:29:09  ghutchis
-//
 // Clean up for 3.1.0b1.
 //
 // Revision 1.14  1998/09/06 03:22:37  ghutchis
-//
 // Bug fixes
 //
 // Revision 1.13  1998/08/03 16:50:31  ghutchis
-//
 // Fixed compiler warnings under -Wall
 //
 // Revision 1.12  1998/07/23 16:18:52  ghutchis
-//
 // Added files (and patch) from Sylvain Wallez for PDF
 // parsing. Incorporates fix for non-Adobe PDFs.
 //
 // Revision 1.11  1998/07/09 09:38:57  ghutchis
-//
-//
 // Added support for local file digging using patches by Pasi. Patches
 // include support for local user (~username) digging.
 //
@@ -108,7 +96,7 @@
 //
 //
 #if RELEASE
-static char RCSid[] = "$Id: Document.cc,v 1.27 1998/12/12 01:46:48 ghutchis Exp $";
+static char RCSid[] = "$Id: Document.cc,v 1.28 1999/01/09 19:58:36 ghutchis Exp $";
 #endif
 
 #include <signal.h>
@@ -300,10 +288,14 @@ Document::getdate(char *datestring)
     // or
     //      Thu, 01 May 1997 00:40:42 GMT
     //
-    if (d.indexOf(',') > 3)
-	mystrptime(d.get(), "%a, %d-%b-%y %T", &tm);
+    // We strip off the weekday before sending to strptime
+    // because some servers send invalid weekdays!
+ 
+    int weekday_index = d.indexOf(',');
+    if (weekday_index > 3)
+        mystrptime(d.sub(weekday_index + 2), "%d-%b-%y %T", &tm);
     else
-	mystrptime(d.get(), "%a, %d %b %Y %T", &tm);
+	mystrptime(d.sub(weekday_index + 2), "%d %b %Y %T", &tm);
 
     if (&tm != NULL) // We hope it isn't NULL!
       {
