@@ -1,3 +1,8 @@
+Sat Jan  9 14:47:17 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdig/Document.cc(getdate): Strip off weekday before calling
+	strptime since some servers return invalid weekdays.
+
 Fri Jan  8 20:11:56 1999  Alexander Bergolth  <bergolth@ariel.wu-wien.ac.at>
 
 	* htdig/Plaintext.cc: fixed bug that inhibited compressing of 
